--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -1,8 +1,10 @@
 <body>
     <div class="container">
-        <header>
-            <h1>Hotel Landon</h1>
-        </header>
+        <div class="card-panel teal lighten-5">
+            <div class="container">
+                <h1>Hotel Landon</h1>
+            </div>
+        </div>
         <div class="row">
             <div class="col s8">
                 {{> members}}
