--- a/imports/ui/members.html
+++ b/imports/ui/members.html
@@ -1,11 +1,44 @@
 <template name="members">
-    <ul>
+    <div class="row">
+        <div class="col s12">
+            <a class="waves-effec waves-light btn modal-trigger" href="#modal1">
+                Add new member
+            </a>
+        </div>
         {{#each members}}
             {{> member}}
         {{/each}}
-    </ul>
+    </div>
+    <div id="modal1" class="modal modal-fixed-footer">
+        <div class="modal-content">
+            <h4>Add new member</h4>
+            <!-- "window.Members = Members;" IN body.js ALLOWS YOU TO DO THIS AUTO-FORM-->
+            {{> quickForm collection="Members" id="insertMemberForm" type="insert"}}
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">
+                Close
+            </a>
+        </div>
+    </div>
 </template>
 
 <template name="member">
-    <li>{{firstName}} {{lastName}}</li>
+    <div class="col s6">
+        <div class="card">
+            <div class="card-image">
+                <img src="URL"/>
+                <span class="card-title">{{firstName}} {{lastName}}</span>
+            </div>
+            <div class="card-content">
+                <p>Member# {{member}}</p>
+                <p>{{city}}, {{state}}</p>
+            </div>
+            <div class="card-action">
+                <!--THIS HELPER 'formatDate' IS GENERAL TO ALL TEMPLATES-->
+                <a href="#">Last day: {{formatDate lastCheckout}}</a>
+                <a href="#">No. of nights: {{numberOfNights}}</a>
+            </div>
+        </div>
+    </div>
 </template>
