--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -1,18 +1,12 @@
-<body>
+<template name="layout">
+    <body>
     <div class="container">
-        <div class="card-panel teal lighten-5">
-            <div class="container">
-                <h1>Hotel Landon</h1>
-            </div>
+        <div class="row">
+            {{> navigation}}
         </div>
         <div class="row">
-            <div class="col s8">
-                {{> members}}
-            </div>
-            <div class="col s4">
-                {{> rooms}}
-            </div>
+            {{> yield}}
         </div>
     </div>
-</body>
-
+    </body>
+</template>
